<resources>
    <string name="app_name">Pizzeria</string>

    <string name="key_hawaienne">KEY_HAW</string>
    <string name="key_montagnarde">KEY_MONT</string>
    <string name="key_napolitaine">KEY_NAPO</string>
    <string name="key_pannaCotta">KEY_PANCOTA</string>
    <string name="key_qfrommage">KEY_QFROM</string>
    <string name="key_raclette">KEY_RACL</string>
    <string name="key_royale">KEY_ROY</string>
    <string name="key_tiramisu">KEY_TIRA</string>

    <string name="key_table">KEY_TABLE</string>
    <string name="table">table numero: </string>
    <string name="COLOR">COLOR </string>


    <string name="Hawaiian">Hawaiian</string>
    <string name="Mountain">Mountain</string>
    <string name="Neapolitan">Neapolitan</string>
    <string name="Pannacotta">Pannacotta</string>
    <string name="Four_Cheese">Four Cheese</string>
    <string name="Raclette">Raclette</string>
    <string name="Royale">Royale</string>
    <string name="Tiramisu">Tiramisu</string>
    <string name="TableNum">Table Number</string>
    <string name="Validate">Validate</string>
    <string name="Mozzarella">Mozzarella</string>
    <string name="Gorgonzola">Gorgonzola</string>
    <string name="Olives">Olives</string>
    <string name="Anchovy">Anchovy</string>
    <string name="Artichokes">Artichokes</string>
    <string name="Capres">Capres</string>
    <string name="Tuna">Tuna</string>
    <string name="Egg">Egg</string>
    <string name="Custom_Pizza">Custom Pizza</string>
    <string name="Setting">Setting</string>
    <string name="No_custom">You have selected no ingredients</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_title">Reset</string>
    <string name="reset_key">reset</string>
    <string name="modal_reset">Do you really want to reset the order </string>


</resources>
